--- a/basico/ejercicio-3/index.html
+++ b/basico/ejercicio-3/index.html
@@ -7,6 +7,7 @@
     <link href="./style.scss" rel="stylesheet" />
   </head>
   <body>
+    <h1>Lemoncode</h1>
     <header>
       <div>
         <span>Home</span>
